test/tests/operators/cron/invalid_value.txt
error: bad cron expression: invalid value for at least one field
 --> tests/operators/cron/invalid_value.tql:5:6
  |
5 | cron "E * * * * *", {
  |      ^^^^^^^^^^^^^ 
  |
